--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@ header {
 h2 {
     margin: 10px 0;
     font-size: 2.5em;
+    text-align: center;
     
 }
 
@@ -52,9 +53,7 @@ section {
 #mis-tecnologias {
     text-align: center;
 }
-#mis-tecnologias {
-    text-align: center;
-}
+
 
 .tarjeta {
     display: inline-block;
@@ -77,9 +76,7 @@ section {
     height: auto;
 }
 
-#formulario-actividades {
-    margin-top: 20px;
-}
+
 
 #formulario {
     max-width: 600px;
@@ -137,6 +134,8 @@ section {
     text-align: center;
     font-size: 24px;
     color: #333;
+    text-align: center;
+    text-align: center;
 }
 
 #actividades-container {
@@ -144,7 +143,6 @@ section {
     flex-wrap: wrap;
     justify-content: center;
 }
-
 
 .actividad {
     margin: 10px;
@@ -168,6 +166,37 @@ section {
 .actividad p {
     font-size: 14px;
     margin-top: 5px;
+}
+
+/* Estilos CSS para los títulos */
+.title-class {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+}
+
+/* Estilos CSS para las descripciones */
+.description-class {
+    font-size: 16px;
+    color: #666;
+}
+
+/* Estilos CSS para las imágenes */
+.image-class {
+    max-width: 50%;
+    height: auto;
+}
+
+/* Estilos CSS para el contenedor de cada actividad */
+.card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+#container-activities {
+    margin-top: 20px;
 }
 footer {
     background-color: #333;
