--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,15 @@
+/* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 }
 
+/* Estilos para el encabezado */
 header {
     background-color: #333;
     color: white;
-    padding: 10px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -15,19 +17,22 @@ h2 {
     margin: 10px 0;
     font-size: 2.5em;
     text-align: center;
-    
 }
 
+/* Estilos para las secciones */
 section {
     padding: 20px;
     background-color: #FFFFFF;
     color: #333333;
 }
 
-#sobre-mi {
+#sobre-mi,
+#mis-tecnologias,
+#mis-actividades {
     text-align: center;
 }
 
+/* Estilos para la sección "Sobre Mí" */
 .personal {
     display: flex;
     justify-content: space-around;
@@ -40,7 +45,6 @@ section {
 .personal img {
     width: 200px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-   
 }
 
 .personal p {
@@ -48,27 +52,23 @@ section {
     line-height: 1.6;
     text-align: justify;
     max-width: 500px;
-
-}
-#mis-tecnologias {
-    text-align: center;
 }
 
-
+/* Estilos para las tarjetas */
 .tarjeta {
     display: inline-block;
-    margin: 20px; 
-    width: 230px; 
+    margin: 20px;
+    width: 230px;
     transition: transform 0.3s ease;
-    background-color: #f0f0f0; 
+    background-color: #f0f0f0;
     border-radius: 10px;
-    padding: 10px; 
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 .tarjeta:hover {
     transform: scale(1.1);
-    background-color: #007bff;
+    background-color: #F0F8FF;
 }
 
 .tarjeta img {
@@ -76,8 +76,7 @@ section {
     height: auto;
 }
 
-
-
+/* Estilos para el formulario */
 #formulario {
     max-width: 600px;
     width: 80%;
@@ -95,10 +94,14 @@ section {
     box-sizing: border-box;
 }
 
+#input-description {
+    height: 100px;
+}
+
 #formulario button {
     padding: 12px;
-    font-size: 18px;
-    background-color: #007bff;
+    font-size: 16px;
+    background-color: #3a7cb6;
     color: #fff;
     border: none;
     border-radius: 8px;
@@ -111,31 +114,14 @@ section {
     background-color: #0056b3;
 }
 
-#formulario button {
-    padding: 10px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-#formulario button:hover {
-    background-color: #0056b3;
-}
-
 /* Estilos para la sección "Mis Actividades Favoritas" */
 #mis-actividades {
     margin-top: 40px;
 }
 
 #mis-actividades h2 {
-    text-align: center;
     font-size: 24px;
     color: #333;
-    text-align: center;
-    text-align: center;
 }
 
 #actividades-container {
@@ -168,41 +154,78 @@ section {
     margin-top: 5px;
 }
 
-/* Estilos CSS para los títulos */
+
 .title-class {
     font-size: 24px;
     font-weight: bold;
     color: #333;
+    word-wrap: break-word;
+    margin-bottom: 8px;
+  
 }
 
-/* Estilos CSS para las descripciones */
 .description-class {
     font-size: 16px;
     color: #666;
+    word-wrap: break-word;
 }
 
-/* Estilos CSS para las imágenes */
 .image-class {
-    max-width: 50%;
+    max-width: 100%;
     height: auto;
+    border-radius: 8px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+        
 }
 
-/* Estilos CSS para el contenedor de cada actividad */
+
+/* Estilos CSS para las tarjetas de actividad */
 .card {
+    max-width: 350px;
+    margin: 0 auto 20px;
     border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 10px;
+    border-radius: 12px;
+    padding: 20px;
+    background-color: #fff;
+    transition: box-shadow 0.3s ease;
+    overflow: hidden;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
 #container-activities {
     margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 30px;
+   
 }
+
+/* Estilos para el botón de eliminación */
+.delete-button {
+    background-color: #ff0000;
+    color: #fff;
+    border: none;
+    padding: 8px 16px;
+    margin-top: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.delete-button:hover {
+    background-color: #cc0000;
+}
+
+/* Estilos para el pie de página */
 footer {
     background-color: #333;
     color: white;
+    font-size: 18px;
     text-align: center;
-    padding: 10px;
+    padding: 20px;
     bottom: 0;
-
 }
